--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,6 +1,58 @@
 .about-container{
     width: 100%;
     min-height: 25rem;
-    background: green;
-    margin: 0;
+    background: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+h1, h3{
+    color: rgb(107, 106, 106);
+    font-size: 1.5rem;
+    border-bottom: 2px solid salmon;
+    padding-bottom: 2px;
+}
+
+h3{
+  font-size: 1rem;
+  border: none;
+}
+
+h4{
+    color: rgb(214, 112, 22);
+}
+
+.style-me-span{
+    color: orangered;
+    font-size: 1.9rem;
+}
+
+.about-information {
+    width: 90%;
+    margin: 15px 0;
+}
+
+p{
+    margin: 10px;
+}
+
+.techs-section-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.each-tech-container{
+    width: 40%;
+    height: 10rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.tech-image-container{
+    width: 100px;
+    height: 100px;
 }
