--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 20px 0;
 }
 
 h1, h3{
@@ -23,7 +24,7 @@ h4{
     color: rgb(214, 112, 22);
 }
 
-.style-me-span{
+.style-word-span{
     color: orangered;
     font-size: 1.9rem;
 }
