--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,5 +1,28 @@
 .projects-container{
     width: 100%;
     min-height: 25rem;
-    background: orange;
+    background: rgb(238, 236, 236);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-top-left-radius: 120px;
+    border-top-right-radius: 120px;
+    margin-top: 5rem;
+    padding-top: 2rem;
+}
+
+h1{
+    margin-bottom: 2rem;
+}
+
+.each-project-container{
+    width: 80%;
+    min-height: 23rem;
+    border-radius: 25px;
+    background: rgb(249, 250, 249);
+    margin: 1.5rem 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(138, 137, 137, 0.19);
 }
