--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -9,6 +9,9 @@
     border-top-right-radius: 120px;
     margin-top: 5rem;
     padding-top: 2rem;
+    padding-bottom: 3rem;
+    border-bottom-left-radius: 120px;
+    border-bottom-right-radius: 120px;
 }
 
 h1{
