--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -1,11 +1,13 @@
 .about-container{
     width: 100%;
     min-height: 25rem;
-    background: white;
+    background: rgb(247, 234, 211);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px 0;
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
 }
 
 h1, h3{
@@ -35,25 +37,5 @@ h4{
 }
 
 p{
-    margin: 10px;
-}
-
-.techs-section-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.each-tech-container{
-    width: 40%;
-    height: 10rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.tech-image-container{
-    width: 100px;
-    height: 100px;
+    margin: 15px;
 }
