--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -1,5 +1,35 @@
 .contact-container{
     width: 100%;
-    min-height: 25rem;
-    color: white;
+    min-height: 30rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: url('./assets/contact_background.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    margin-top: 3rem;
+    padding-bottom: 4rem;
+    border-bottom-left-radius: 120px;
+    border-bottom-right-radius: 120px;
+}
+.bounceInUp{
+    width: inherit;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+form{
+    width: 70%;
+    height: 25rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    background-color: whitesmoke;
+    border-radius: 30px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(138, 137, 137, 0.19);
 }
