--- a/src/components/projects/each_project/EachProject.css
+++ b/src/components/projects/each_project/EachProject.css
@@ -38,12 +38,13 @@
 
 }
 
-.project-sumamry{
-    width: 100%;
+.project-summary{
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding: 10px;
 }
 
 a{
