--- a/src/components/about/About.css
+++ b/src/components/about/About.css
@@ -34,8 +34,26 @@ h4{
 .about-information {
     width: 90%;
     margin: 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 p{
-    margin: 15px;
+    margin: 15px 0;
+}
+
+
+
+@media(min-width : 960px){
+    .about-information{
+        width: 70%;
+        align-items: center;
+    }
+
+    .about-container{
+        border-bottom-left-radius: 150px;
+        border-bottom-right-radius: 150px;
+    }
+
 }
