--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -33,3 +33,15 @@ form{
     border-radius: 30px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(138, 137, 137, 0.19);
 }
+
+@media(min-width :720px){
+    form{
+        width: 60%;
+    }
+}
+
+@media(min-width :960px){
+    form{
+        width: 50%;
+    }
+}
