--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -21,3 +21,15 @@ small{
     color: rgb(241, 64, 44);
     font-weight: 600;
 }
+
+@media(min-width :720px){
+    .social-medias-container{
+        width: 70%;
+    }
+}
+
+@media(min-width :1200px){
+     .social-medias-container{
+         width: 50%;
+     }
+}
