--- a/src/components/home/HomePage.css
+++ b/src/components/home/HomePage.css
@@ -10,32 +10,24 @@
 
 .rubberBand{
     width: inherit;
-    height: inherit;
+    min-height: inherit;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
-/* 
-video{
-    width: 100%;
-    min-height: 90vh;
-    object-fit: cover;
-    position: fixed; 
-    position: absolute;
-} */
 
 h1{
     color: white;
 }
 .homepage-details{
-    /* z-index: 2; */
     height: 20rem;
     width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     color: white;
-    margin-top: 10vh;
 }
 
 .homepage-image{
