--- a/src/components/skills/Skills.css
+++ b/src/components/skills/Skills.css
@@ -27,3 +27,20 @@
     width: 100px;
     height: 100px;
 }
+
+@media(min-width :720px){
+    .techs-section-container{
+        width: 70%;
+    }
+}
+
+@media(min-width : 960px){
+    .techs-section-container{
+        width: 90%;
+    }
+
+    .each-tech-container{
+        width: 30%;
+        margin: 25px 0;
+    }
+}
