changed homepage background photo

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -34,6 +34,10 @@ form{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(138, 137, 137, 0.19);
 }
 
+.wave-icon{
+    font-size: 2rem;
+}
+
 @media(min-width :720px){
     form{
         width: 60%;
