adds articles section to portfolio

--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -11,9 +11,9 @@ nav{
 }
 
 .nav-links-container{
-    background : rgb(46, 45, 45);
+    background : rgb(158, 158, 158);
     width: 100%;
-    height: 20rem;
+    height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
