--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,11 @@
 }
 
 html, body{
-    width: 100%;
+    max-width: 100%;
     min-height: 100%;
+   overflow-x: hidden;
 }
 body{
    font-family: 'Montserrat', serif;
    font-size: 1rem;
-   overflow-x: hidden;
 }
