--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -5,6 +5,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     border-top-left-radius: 120px;
     border-top-right-radius: 120px;
     margin-top: 5rem;
@@ -12,6 +13,12 @@
     padding-bottom: 3rem;
     border-bottom-left-radius: 120px;
     border-bottom-right-radius: 120px;
+}
+
+.projects-container p{
+    padding: 0 15px;
+    text-align: center;
+    color: rgb(95, 33, 4);
 }
 
 .projects-listing-container{
@@ -26,6 +33,7 @@
 h1{
     margin-bottom: 2rem;
 }
+
 
 .each-project-container{
     width: 20rem;
@@ -43,8 +51,16 @@ h1{
     .projects-listing-container{
         flex-direction: row;
         flex-wrap: wrap;
-        justify-content: space-around;
+        justify-content: center;
+        align-items: center;
     }
+     .each-project-container{
+         width: 20rem;
+         margin: 15px;
+     }
+}
+
+@media(min-width :960px){
      .each-project-container{
          width: 25rem;
      }
@@ -52,6 +68,6 @@ h1{
 
 @media(min-width :1200px){
     .projects-listing-container{
-        width: 80%;
+        width: 70%;
     }
 }
