--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -63,11 +63,12 @@ h1{
 @media(min-width :960px){
      .each-project-container{
          width: 25rem;
+         margin: 2rem;
      }
 }
 
 @media(min-width :1200px){
     .projects-listing-container{
-        width: 70%;
+        width: 80%;
     }
 }
