--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -1,26 +1,72 @@
 nav{
     width: 100%;
     height: 10vh;
-    background: rgb(12, 12, 12);
+    background: rgb(38, 38, 38);
     position: fixed;
     top: 0;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+}
+
+.nav-container{
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     padding: 10px;
-    z-index: 3;
 }
 
 .nav-links-container{
-    background : rgb(158, 158, 158);
+    background : rgb(38, 38, 38);
     width: 100%;
     height: 50vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    outline: none;
+
+}
+
+.nav-links-container .links-container{
+    width: 100%;
+    min-height: 15vh;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.nav-links-container .links-container button{
+    color: rgb(239, 239, 239);
+}
+
+
+
+.hints-container p{
+    color: white;
 }
 
 
 .activeHate{
     border-bottom: 5px solid wheat;
+}
+
+
+
+@media(min-width :700px){
+    .nav-links-container{
+        height: 25vh;
+    }
+}
+
+@media(min-width :1300px){
+    .nav-container{
+        width: 1300px;
+    }
+
+    .nav-links-container .links-container{
+        width: 1300px;
+    }
 }
