--- a/src/components/projects/each_project/EachProject.css
+++ b/src/components/projects/each_project/EachProject.css
@@ -18,6 +18,12 @@
     align-items: center;
 }
 
+.each-image-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
 .MuiSvgIcon-root{
     cursor: pointer;
 }
