add experience project to projects and make portfolio better

--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -13,7 +13,7 @@
     border-bottom-left-radius: 120px;
     border-bottom-right-radius: 120px;
 }
-.bounceInUp{
+.tada{
     width: inherit;
     height: inherit;
     display: flex;
